--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,18 @@
     box-sizing: border-box;
     margin: 0;
 }
+
+#root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+.app {
+    width: 1280px;
+}
+
+header {
+    padding: 20px;
+}
