--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -1,5 +1,5 @@
 .button {
-    border: 2px solid teal;
+    border: 2px solid rgb(124, 29, 148);
     padding: 8px 12px;
     background: transparent;
     cursor: pointer;
