--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,10 @@
 }
 
 header {
-    display: flex;
     width: 100vw;
+    display: flex;
     justify-content: space-between;
+    background: linear-gradient(to right, #64b3f4 0%, #c2e59c);
     padding: 20px;
     border-bottom: solid 1px;
 }
@@ -25,7 +26,7 @@ header {
 .header_btns {
     display: flex;
     justify-content: space-between;
-    width: 16vw;
+    width: 18vw;
 }
 
 main {
