--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -1,10 +1,20 @@
 .button {
-    border: 2px solid rgb(124, 29, 148);
+    --button-color: rgb(124, 29, 148);
+    border: 2px solid var(--button-color);
     padding: 8px 12px;
     background: transparent;
     cursor: pointer;
 }
 
 .button:hover {
-    background: rgba(0, 128, 128, .15);
+    background: var(--button-color);
+    & a {
+        color: white;
+    }
+}
+
+
+.button a {
+    text-decoration: none;
+    color: black;
 }
