--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    /* border: red 1px solid; */
 }
 
 #root {
@@ -9,20 +8,6 @@
     flex-direction: column;
     align-items: center;
     font-family: 'Segoe UI', sans-serif;
-}
-
-.app {
-    width: 1280px;
-}
-
-@media (max-width: 1280px) {
-    .app {
-        width: 100%;
-    }
-
-    .topic-nav {
-        padding: 0 10px;
-    }
 }
 
 header {
@@ -35,68 +20,43 @@ header {
     padding: 10px 20px;
 }
 
-.header__logo, .header__main-nav {
-    flex-basis: 40%;
-}
-
-.header__auth {
-    flex-basis: 20%;
-}
-
-.logo {
-    cursor: pointer;
-}
-
-
-@media (max-width: 756px) {
-    header {
-        padding: 10px;
+.header__logo {
+    display: flex;
+    align-items: center;
+    & img {
+        cursor: pointer;
     }
+}
 
-    .header__logo {
-        flex-basis: 15%;
-    }
+.app {
+    width: 1280px;
+}
 
-    .header__main-nav {
-        flex-basis: 25%;
+@media (max-width: 1280px) {
+    .app {
+        width: 100%;
     }
 }
 
 main {
     display: flex;
-    flex-wrap: wrap;
-    margin-top: 25px;
-    height: 700px;
+    justify-content: space-evenly;
+    margin-top: 17px;
 }
 
-.topic-nav {
-    flex-basis: 10%;
-    
-    & nav {
-        display: flex;
-        flex-direction: column;
-
-        & button {
-            margin: 0 3px 7px 0;
-        }
+main nav {
+    display: flex;
+    flex-direction: column;
+    & button {
+        margin: 0 5px 7px;
     }
 }
 
-.content {
-    display: flex;
-    justify-content: center;
-    flex-basis: 75%;
+.main__content img{
+    max-width: 100%;
 }
 
-img {
-    object-fit: cover;
-    object-position: bottom;
-}
-
-.load-button {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    padding-top: 1%;
-    flex-basis: 15%;
+.main__load-button button{
+    margin: 0 5px 7px;
+    white-space: wrap;
 }
