--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 .button {
     --button-color: rgb(124, 29, 148);
-
     border: 2px solid var(--button-color);
-    padding: 8px 12px;
+    font-family: Roboto;
+    font-size: 15px;
+    padding: 6px 10px;
     background: transparent;
     cursor: pointer;
-
+    white-space: nowrap;
     & a {
         text-decoration: none;
         color: black;
@@ -15,7 +18,6 @@
 .button:hover {
     background: var(--button-color);
     color: white;
-
     & a {
         color: white;
     }
