--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -3,7 +3,7 @@
 .button {
     --button-color: rgb(124, 29, 148);
     border: 2px solid var(--button-color);
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     font-size: 15px;
     padding: 6px 10px;
     background: transparent;
