--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 }
 
 #root {
+    --theme-color: rgb(124, 29, 148);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,6 +55,19 @@ main nav {
 
 .main__content img{
     max-width: 100%;
+}
+
+.page-wrapper {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.page {
+    border: 1px solid var(--theme-color);
+    padding: 1px 5px;
+    margin: 0 1px;
+    cursor: pointer;
 }
 
 .main__load-button button{
