--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .button {
-    --button-color: rgb(124, 29, 148);
-    border: 2px solid var(--button-color);
+    border: 2px solid var(--theme-color);
     font-family: Roboto, sans-serif;
     font-size: 15px;
     padding: 6px 10px;
@@ -16,7 +15,7 @@
 }
 
 .button:hover {
-    background: var(--button-color);
+    background: var(--theme-color);
     color: white;
     & a {
         color: white;
