--- a/src/App.css
+++ b/src/App.css
@@ -56,17 +56,17 @@ main nav {
 .image-viewer {
     display: flex;
     flex-flow: column;
+    /* align-items: center; */
 }
 
-.main__content img{
-    max-width: 100%;
-    max-height: 83vh;
+.image-viewer img {
+    max-height: 85vh;
 }
 
 .pagination {
-    display: flex;
-    justify-content: center;
     margin: 20px 0;
+    position: absolute;
+    bottom: 0;
 }
 
 .page {
@@ -81,7 +81,7 @@ main nav {
     font-weight: bold;
 }
 
-.main__load-button button{
+.main__load-button button {
     margin: 0 5px;
     white-space: wrap;
 }
@@ -95,8 +95,17 @@ main nav {
         flex-direction: row;
         justify-content: center;
     }
+
+    .image-viewer img {
+        max-width: 100%;
+        max-height: none;
+    }
+
+    .pagination {
+        display: none;
+    }
     
-    .main__load-button button{
+    .main__load-button button {
         display: none;
     }
 }
